--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,12 +8,15 @@
     <title>Paddle Game</title>
 
     <link rel="stylesheet" href="css/style.css">
+
 </head>
+
 <body>
-    <canvas id="gameScreen">
+    <canvas id="gameScreen" width="800" height="600">
 
     </canvas>
 
-    <script src="js/index.js"></script>
+    <script type="module" src="js/script.js"></script>
 </body>
+
 </html>
