--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 </head>
 
 <body>
+    <img id="img_ball" src="assets/images/ball.png">
+
     <canvas id="gameScreen" width="800" height="600">
 
     </canvas>
